# parakeet

./: Makefile  README.md  pyproject.toml
src/parakeet/: __init__.py  budget.py
tests/: test_api.py  test_budget.py
